--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 		<label for="btn-menu"><img src="forest.jpg" width="40px" height="40px"></label>
 		<nav class="menu">
 			<ul>
-				<li><a href="">Inicio</a></li>
-				<li><a href="">Servicios</a></li>
-				<li><a href="">Productos</a></li>
-				<li><a href="">Clientes</a></li>
+				<li><a href="index.html">Inicio</a></li>
+				<li><a href="servicios.html">Servicios</a></li>
+				<li><a href="productos.html">Productos</a></li>
+				<li><a href="clientes.html">Clientes</a></li>
 				<li><a href="contacto.html">Contacto</a></li>
 			</ul>
 		</nav>
