--- a/contacto.html
+++ b/contacto.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>
-	</title>
+	<title></title>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device=width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1">
 	<link rel="stylesheet" type="text/css" href="estilos_contacto.css">
 </head>
 <body>
+	<header>
+		<input type="checkbox" id="btn-menu">
+		<label for="btn-menu"><img src="forest.jpg" width="40px" height="40px"></label>
+		<nav class="menu">
+			<ul>
+				<li><a href="index.html">Inicio</a></li>
+				<li><a href="servicios.html">Servicios</a></li>
+				<li><a href="productos.html">Productos</a></li>
+				<li><a href="clientes.html">Clientes</a></li>
+				<li><a href="contacto.html">Contacto</a></li>
+			</ul>
+		</nav>
+	</header>
 	<form action="enviar.php" method="post">
 		<h2>Contacto</h2>
 		<input type="text" name="Nombre" placeholder="Nombre" required>
