--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<h1>Carpintería</h1>
 	<h3>Vicente Jaime Azcárate</h3>
 	<br>
-	
+	<img src="architecture.jpg" class="architecture">
 	
 	<table align="center">
 		<tr>
